service/k3s/templates/minio-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-operator
---
apiVersion: v1
kind: Service
metadata:
  name: minio-np
  namespace: default
spec:
  type: NodePort
  ports:
  - name: minio
    port: 80
    nodePort: 30900
    protocol: TCP
    targetPort: 9000
  selector:
    v1.min.io/tenant: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console-np
  namespace: default
spec:
  type: NodePort
  ports:
  - name: console
    port: 9090
    nodePort: 31443
    protocol: TCP
    targetPort: 9090
  selector:
    v1.min.io/console: minio-console
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-proxy-headers: 'X-Forwarded-Proto: https'
    kubernetes.io/ingress.class: traefik-cert-manager
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: s3
  namespace: default
spec:
  tls:
    - hosts:
      - s3.${domain}
      secretName: s3-tls
  rules:
    - host: s3.${domain}
      http:
        paths:
          - backend:
              serviceName: minio-console
              servicePort: 9090
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-proxy-headers: 'X-Forwarded-Proto: https'
    kubernetes.io/ingress.class: traefik-cert-manager
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: minio
  namespace: default
spec:
  tls:
    - hosts:
      - minio.${domain}
      secretName: minio-tls
  rules:
    - host: minio.${domain}
      http:
        paths:
          - backend:
              serviceName: minio
              servicePort: 80
---

  # mc alias set minio https://minio.${domain} accesskey secretkey
  # mc admin policy add minio '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":["s3:*"],"Resource":["arn:aws:s3:::*"]},{"Effect":"Allow","Action":["admin:*"]}]}'
  # mc admin trace -v -a minio
